==> andriyadi/AccidentDetection-Pico-EdgeImpulse/02_ei_carstate_recog/source/MPU6050.cpp <==
#include <stdio.h>
#include <math.h>
#include "MPU6050.h"

Vector MPU6050::readRawAccel(void)
{
    int16_t accel[3];
    uint8_t buffer[6];
    // Start reading acceleration registers from register 0x3B for 6 bytes
    uint8_t reg = MPU6050_REG_ACCEL_XOUT_H;
    i2c_write_blocking(i2c_default, mpuAddress, &reg, 1, true); // true to keep master control of bus
    i2c_read_blocking(i2c_default, mpuAddress, buffer, 6, false);

    for (int i = 0; i < 3; i++) {
        accel[i] = (buffer[i * 2] << 8 | buffer[(i * 2) + 1]);
    }

    //printf("Raw Acc. X = %d, Y = %d, Z = %d\n", accel[0], accel[1], accel[2]);

    ra.XAxis = accel[0]*1.0f;
    ra.YAxis = accel[1]*1.0f;
    ra.ZAxis = accel[2]*1.0f;

    return ra;
}

Vector MPU6050::readRawGyro(void)
{
    int16_t gyro[3];
    uint8_t buffer[6];
    // Now gyro data from reg 0x43 for 6 bytes
    // The register is auto incrementing on each read
    uint8_t reg = MPU6050_REG_GYRO_XOUT_H;
    i2c_write_blocking(i2c_default, mpuAddress, &reg, 1, true);
    i2c_read_blocking(i2c_default, mpuAddress, buffer, 6, false);  // False - finished with bus

    for (int i = 0; i < 3; i++) {
        gyro[i] = (buffer[i * 2] << 8 | buffer[(i * 2) + 1]);;
    }

    rg.XAxis = gyro[0];
    rg.YAxis = gyro[1];
    rg.ZAxis = gyro[2];

    return rg;
}

uint8_t MPU6050::fastRegister8(uint8_t reg)
{
    uint8_t value;
    i2c_write_timeout_us(i2c_default, mpuAddress, &reg, 1, true, 100*1000);
    i2c_read_timeout_us(i2c_default, mpuAddress, &value, 1, false, 100*1000);

    //printf("Value: %d\r\n", value);
    return value;
}

uint8_t MPU6050::readRegister8(uint8_t reg)
{
    uint8_t value;
    i2c_write_blocking(i2c_default, mpuAddress, &reg, 1, true);
    i2c_read_blocking(i2c_default, mpuAddress, &value, 1, false);

    printf("Value: %d\r\n", value);
    return value;
}

void MPU6050::writeRegister8(uint8_t reg, uint8_t value)
{
    uint8_t buf[] = {reg, value};
    i2c_write_blocking(i2c_default, mpuAddress, buf, 2, false);
}

int16_t MPU6050::readRegister16(uint8_t reg)
{
    uint8_t readbuf[6];
    i2c_write_blocking(i2c_default, mpuAddress, &reg, 1, true);
    i2c_read_blocking(i2c_default, mpuAddress, readbuf, 2, false);

    int16_t value = readbuf[0] << 8 | readbuf[1];

    return value;
}

void MPU6050::writeRegister16(uint8_t reg, int16_t value)
{
    uint8_t sendbuf[] = {reg};
    
    uint8_t databuf[2];
    databuf[2] = (value >> 8) & 0xFF;
    databuf[3] = value & 0xFF;

    i2c_write_blocking(i2c_default, mpuAddress, sendbuf, 1, true);
    i2c_read_blocking(i2c_default, mpuAddress, databuf, 2, false);
}
